--- a/index.html
+++ b/index.html
@@ -138,16 +138,37 @@
       <section id="view-update" class="hidden flex-1 p-6 relative z-50 bg-[#0c1218] flex gap-6">
         <div class="w-1/3 glass-panel rounded-2xl p-6 flex flex-col gap-6 h-fit">
             <div class="text-center">
+                <div class="inline-flex p-4 rounded-full bg-blue-500/20 mb-4 ring-1 ring-blue-400/50 shadow-[0_0_20px_rgba(59,130,246,0.3)]">
+                    <svg class="w-10 h-10 text-blue-400" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 16a4 4 0 01-.88-7.903A5 5 0 1115.9 6L16 6a5 5 0 011 9.9M15 13l-3-3m0 0l-3 3m3-3v12" /></svg>
+                </div>
                 <h3 class="text-xl font-bold text-white">Hệ thống Cập nhật</h3>
                 <p class="text-sm text-slate-400 mt-2">Phiên bản hiện tại: <span id="current-version-display" class="font-bold text-white">...</span></p>
             </div>
-            <button id="auto-update-btn" class="w-full py-3 bg-gradient-to-r from-blue-600 to-cyan-600 rounded-xl text-white font-bold shadow-lg">
-                <span id="btn-text">Kiểm tra ngay</span>
+            
+            <div class="bg-black/30 rounded-lg p-4 border border-white/5">
+                <div class="flex justify-between text-sm mb-2"><span class="text-slate-400">Trạng thái:</span><span id="status-text" class="text-yellow-400 font-medium">Đang chờ...</span></div>
+            </div>
+
+            <button id="auto-update-btn" class="group relative w-full py-3 bg-gradient-to-r from-blue-600 to-cyan-600 rounded-xl text-white font-bold shadow-lg hover:shadow-cyan-500/40 transition-all active:scale-95 overflow-hidden">
+                <div class="absolute inset-0 bg-white/20 translate-y-full group-hover:translate-y-0 transition-transform duration-300"></div>
+                <span class="relative flex items-center justify-center gap-2">
+                    <svg class="w-5 h-5 animate-spin hidden" id="loading-icon" fill="none" viewBox="0 0 24 24"><circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle><path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path></svg>
+                    <span id="btn-text">Kiểm tra ngay</span>
+                </span>
             </button>
         </div>
-        <div class="flex-1 glass-panel rounded-2xl p-4 flex flex-col overflow-hidden">
-            <div id="update-log" class="flex-1 font-mono text-sm text-green-400 overflow-y-auto"></div>
-            <div id="progress-container" class="hidden h-1 w-full bg-slate-800 mt-2"><div id="progress-bar" class="h-full bg-cyan-500 w-0"></div></div>
+        
+        <div class="flex-1 glass-panel rounded-2xl p-0 flex flex-col overflow-hidden border border-slate-700/50 bg-[#0c1218]/80">
+            <div class="bg-white/5 px-4 py-2 border-b border-white/5 flex items-center justify-between">
+                <span class="text-xs font-mono text-slate-400">Terminal Output</span>
+                <div class="flex gap-1.5">
+                    <div class="w-2.5 h-2.5 rounded-full bg-red-500/50"></div>
+                    <div class="w-2.5 h-2.5 rounded-full bg-yellow-500/50"></div>
+                    <div class="w-2.5 h-2.5 rounded-full bg-green-500/50"></div>
+                </div>
+            </div>
+            <div id="update-log" class="flex-1 p-4 font-mono text-sm text-green-400/90 overflow-y-auto space-y-1"></div>
+            <div id="progress-container" class="hidden h-1 w-full bg-slate-800"><div id="progress-bar" class="h-full bg-cyan-500 w-0"></div></div>
         </div>
       </section>
     </main>
