--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
       body { background: linear-gradient(135deg, #0f2027 0%, #203a43 50%, #2c5364 100%); }
       .no-select { -webkit-user-select: none; user-select: none; cursor: default; }
-      .fixed-sidebar { width: 260px; flex-shrink: 0; transition: width 0.3s ease; z-index: 50; }
+      .fixed-sidebar { width: 310px; flex-shrink: 0; transition: width 0.3s ease; z-index: 50; }
       .sidebar-collapsed { width: 64px !important; }
       .sidebar-collapsed .sidebar-text, .sidebar-collapsed .menu-arrow { display: none; }
       .sidebar-collapsed .submenu { display: none !important; }
@@ -16,17 +16,13 @@
       .sidebar-collapsed #toggle-icon { transform: rotate(180deg); }
       .sidebar-collapsed .menu-group button { justify-content: center; padding: 0; }
       .sidebar-collapsed .menu-group button div { justify-content: center; }
-      .copyright-mini { display: none; }
-      .copyright-full { display: block; opacity: 1; transition: opacity 0.5s ease; }
-      .sidebar-collapsed .copyright-mini { display: flex; justify-content: center; align-items: center; }
-      .sidebar-collapsed .copyright-full { display: none; opacity: 0; }
       .glass-sidebar { background: rgba(255, 255, 255, 0.05); -webkit-backdrop-filter: blur(10px); backdrop-filter: blur(10px); border-right: 1px solid rgba(255, 255, 255, 0.1); }
       .glass-panel { background: rgba(255, 255, 255, 0.03); -webkit-backdrop-filter: blur(16px); backdrop-filter: blur(16px); border: 1px solid rgba(255, 255, 255, 0.1); }
       .nsl-table th { text-align: left; padding: 12px; background: rgba(255,255,255,0.1); color: #22d3ee; }
       .nsl-table td { padding: 12px; border-bottom: 1px solid rgba(255,255,255,0.05); }
       .nsl-table tr:hover { background: rgba(255,255,255,0.05); }
       .submenu { transition: max-height 0.3s ease-out, opacity 0.3s ease-out; max-height: 0; opacity: 0; overflow: hidden; }
-      .submenu.open { max-height: 200px; opacity: 1; }
+      .submenu.open { max-height: 2000px; opacity: 1; }
       .menu-disabled { opacity: 0.4; pointer-events: none; filter: grayscale(1); }
       ::-webkit-scrollbar { width: 5px; }
       ::-webkit-scrollbar-track { background: transparent; }
@@ -40,38 +36,59 @@
           <div class="min-w-[32px] h-8 w-8 bg-cyan-500 rounded-lg flex items-center justify-center shadow-lg font-bold">NSL</div>
           <span class="font-bold text-lg text-white tracking-wide whitespace-nowrap sidebar-text">NSL DATA</span>
         </div>
-        <button id="toggle-sidebar" aria-label="Thu gọn menu" onclick="toggleSidebar()" class="w-6 h-6 bg-white/10 rounded-full flex items-center justify-center hover:bg-white/20 transition-colors">
+        <button id="toggle-sidebar" title="Thu gọn menu" aria-label="Thu gọn menu" class="w-6 h-6 bg-white/10 rounded-full flex items-center justify-center hover:bg-white/20 transition-colors">
             <svg class="w-3 h-3 text-white transition-transform duration-300" id="toggle-icon" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7" /></svg>
         </button>
       </div>
       <nav class="flex-1 overflow-y-auto py-4 space-y-2 px-2">
-        <button onclick="switchToHome()" class="w-full flex items-center gap-3 px-3 py-2.5 rounded-lg hover:bg-white/10 transition-colors group mb-2 bg-white/5 border border-white/5">
-           <span class="text-xl">🏠</span> <span class="sidebar-text font-bold text-sm text-cyan-300">Trang Chủ</span>
+        <button id="btn-home" class="w-full flex items-center gap-3 px-3 py-2.5 rounded-lg hover:bg-white/10 transition-colors group mb-2 bg-white/5 border border-white/5">
+           <span class="text-xl">🏠</span> <span class="sidebar-text font-bold text-sm text-white">Trang Chủ</span>
         </button>
+
         <div class="border-t border-white/10 my-2"></div>
+
         <div class="menu-group">
-          <button onclick="loadExternalSystem('https://hcm.quanlytruonghoc.edu.vn/', 'Quản lý Trường học', 'menu-qlth')" class="w-full flex items-center justify-between px-3 py-2.5 rounded-lg hover:bg-white/10 transition-colors group">
-            <div class="flex items-center gap-3"><span class="text-xl">🏫</span> <span class="sidebar-text font-medium text-sm">QL Trường Học</span></div>
-            <svg class="w-3 h-3 text-slate-400 menu-arrow" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" /></svg>
+          <button id="btn-qlth" data-open-system="true" data-url="https://hcm.quanlytruonghoc.edu.vn/Default.aspx" data-name="Quản lý trường học" data-menu="menu-qlth"
+                  class="w-full flex items-center justify-between p-3 text-white hover:bg-white/10 rounded transition-colors group">
+              <div class="flex items-center gap-3">
+                  <span class="text-xl group-hover:text-cyan-400 transition-colors">🏫</span>
+                  <span class="sidebar-text font-medium">Quản lý trường học</span>
+              </div>
+              <span class="menu-arrow sidebar-text text-xs text-slate-400 transition-transform duration-300">▼</span>
           </button>
-          <div id="menu-qlth" class="submenu pl-9 space-y-1 menu-disabled">
-            <button onclick="navigateRust('https://hcm.quanlytruonghoc.edu.vn/nhap-diem')" class="w-full text-left px-3 py-2 text-xs text-slate-300 hover:text-white hover:bg-white/5 rounded-md">👉 Nhập điểm</button>
-            <button onclick="navigateRust('https://hcm.quanlytruonghoc.edu.vn/nhan-xet')" class="w-full text-left px-3 py-2 text-xs text-slate-300 hover:text-white hover:bg-white/5 rounded-md">👉 Nhận xét</button>
+
+          <div id="menu-qlth" class="submenu hidden pl-2 space-y-1 overflow-hidden transition-all duration-300 border-l border-white/10 ml-4">
+              <div class="px-3 py-1 mt-2 text-[10px] uppercase tracking-wider text-cyan-400 font-bold sidebar-text opacity-90">Điểm số</div>
+              <button class="menu-link pl-6 p-2 text-sm text-white hover:text-cyan-300 hover:bg-white/5 rounded flex items-center gap-2 transition-colors" data-parent="menu-qlth" data-nav="https://hcm.quanlytruonghoc.edu.vn/C2/NhapDiemDiaPhuong.aspx">📝 Nhập điểm</button>
+              <button class="menu-link pl-6 p-2 text-sm text-white hover:text-cyan-300 hover:bg-white/5 rounded flex items-center gap-2 transition-colors" data-parent="menu-qlth" data-nav="https://hcm.quanlytruonghoc.edu.vn/C2/NhapNhanXetDiaPhuong.aspx">💬 Nhập nhận xét môn học</button>
+
+              <div class="px-3 py-1 mt-2 text-[10px] uppercase tracking-wider text-orange-400 font-bold sidebar-text opacity-90">Lịch báo giảng</div>
+              <button class="menu-link pl-6 p-2 text-sm text-white hover:text-orange-300 hover:bg-white/5 rounded flex items-center gap-2 transition-colors" data-parent="menu-qlth" data-nav="https://hcm.quanlytruonghoc.edu.vn/ThoiKhoaBieu/C2/DanhMucTietPPCT.aspx">📅 Tổ trưởng nhập PPCT</button>
+              <button class="menu-link pl-6 p-2 text-sm text-white hover:text-orange-300 hover:bg-white/5 rounded flex items-center gap-2 transition-colors" data-parent="menu-qlth" data-nav="https://hcm.quanlytruonghoc.edu.vn/ThoiKhoaBieu/C2/KhaiBaoLichBaoGiang.aspx">✍️ Khai báo LBG</button>
+
+              <div class="px-3 py-1 mt-2 text-[10px] uppercase tracking-wider text-green-400 font-bold sidebar-text opacity-90">Sổ đầu bài</div>
+              <button class="menu-link pl-6 p-2 text-sm text-white hover:text-green-300 hover:bg-white/5 rounded flex items-center gap-2 transition-colors" data-parent="menu-qlth" data-nav="https://hcm.quanlytruonghoc.edu.vn/C2/SoDauBai.aspx">📖 Nhập sổ đầu bài</button>
+              <button class="menu-link pl-6 p-2 text-sm text-white hover:text-green-300 hover:bg-white/5 rounded flex items-center gap-2 transition-colors" data-parent="menu-qlth" data-nav="https://hcm.quanlytruonghoc.edu.vn/ChuKyDienTu/C2/SoDauBaiGiaoVienBoMonKyDuyetXML.aspx">✒️ GVBM ký duyệt</button>
+              <button class="menu-link pl-6 p-2 text-sm text-white hover:text-green-300 hover:bg-white/5 rounded flex items-center gap-2 transition-colors" data-parent="menu-qlth" data-nav="https://hcm.quanlytruonghoc.edu.vn/ChuKyDienTu/C2/SoDauBaiGiaoVienChuNhiemKyDuyetXML.aspx">⭐ GVCN ký duyệt</button>
           </div>
         </div>
+
         <div class="menu-group">
-          <button onclick="loadExternalSystem('https://truong.hcm.edu.vn/', 'CSDL Ngành', 'menu-csdl')" class="w-full flex items-center justify-between px-3 py-2.5 rounded-lg hover:bg-white/10 transition-colors group">
+          <button id="btn-csdl" data-open-system="true" data-url="https://truong.hcm.edu.vn/Default.aspx" data-name="CSDL Ngành" data-menu="menu-csdl" 
+                  class="w-full flex items-center justify-between px-3 py-2.5 rounded-lg hover:bg-white/10 transition-colors group text-white">
             <div class="flex items-center gap-3"><span class="text-xl">💾</span> <span class="sidebar-text font-medium text-sm">CSDL Ngành</span></div>
             <svg class="w-3 h-3 text-slate-400 menu-arrow" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" /></svg>
           </button>
-          <div id="menu-csdl" class="submenu pl-9 space-y-1 menu-disabled">
-            <button onclick="navigateRust('https://truong.hcm.edu.vn/hoc-ba-dien-tu')" class="w-full text-left px-3 py-2 text-xs text-slate-300 hover:text-white hover:bg-white/5 rounded-md">👉 Ký học bạ</button>
+          <div id="menu-csdl" class="submenu pl-9 space-y-1 menu-disabled hidden">
+             <button class="menu-link pl-6 p-2 text-xs text-white hover:text-white hover:bg-white/5 rounded-md" data-parent="menu-csdl" data-nav="https://truong.hcm.edu.vn/hoc-ba-dien-tu">👉 Ký học bạ</button>
           </div>
         </div>
-        <button onclick="switchToPasswordManager()" class="w-full flex items-center gap-3 px-3 py-2.5 rounded-lg hover:bg-white/10 mt-4 text-slate-300">
+
+        <button id="btn-passwords" class="w-full flex items-center gap-3 px-3 py-2.5 rounded-lg hover:bg-white/10 mt-4 text-white">
            <span class="text-xl">🔑</span> <span class="sidebar-text font-medium text-sm">Quản lý Mật khẩu</span>
         </button>
       </nav>
+
       <div class="shrink-0 p-4 border-t border-white/10 bg-black/20 backdrop-blur-sm relative overflow-hidden">
           <div class="copyright-full text-center">
               <p class="text-[10px] text-slate-400 uppercase tracking-wider mb-1">Developed by</p>
@@ -83,47 +100,37 @@
           </div>
       </div>
     </aside>
+
     <main class="flex-1 relative flex flex-col h-full bg-[#0c1218]/90 overflow-hidden">
       <header class="h-16 flex justify-between items-center px-6 border-b border-white/5 bg-white/5 backdrop-blur-md z-10 shrink-0">
         <h2 id="page-title" class="text-xl font-bold text-white tracking-wide">Trang chủ</h2>
       </header>
+
       <section id="view-home" class="flex flex-col h-full overflow-hidden">
           <div class="flex-1 overflow-y-auto p-6 space-y-6">
               <div class="glass-panel p-8 rounded-2xl border border-white/10 bg-gradient-to-r from-cyan-900/40 to-blue-900/40 shadow-2xl">
                   <h1 class="text-3xl font-bold text-white mb-2">Chào mừng trở lại! 👋</h1>
                   <p class="text-slate-300">Hệ thống hỗ trợ nhập liệu và quản lý dữ liệu tập trung.</p>
               </div>
-              <div class="space-y-4">
-                  <h3 class="text-lg font-bold text-cyan-400 border-l-4 border-cyan-500 pl-3">📢 Thông báo từ Nhà trường</h3>
-                  <div class="bg-white/5 p-4 rounded-lg border border-white/5 hover:bg-white/10 transition-colors"><h4 class="font-bold text-white mb-1">Lịch nhập điểm học kỳ I</h4><p class="text-sm text-slate-400">Yêu cầu hoàn thành trước 15/01/2026.</p></div>
-              </div>
-          </div>
-          <div class="shrink-0 h-auto bg-[#080d11] border-t border-white/10 p-3 flex items-center gap-4 shadow-[0_-5px_20px_rgba(0,0,0,0.5)] z-20">
-              <button id="auto-update-btn" class="shrink-0 px-4 py-2 bg-slate-800 hover:bg-cyan-700 rounded-lg border border-white/10 flex items-center gap-2 transition-all group">
-                  <svg class="w-4 h-4 text-cyan-400 group-hover:text-white animate-spin hidden" id="loading-icon" fill="none" viewBox="0 0 24 24"><circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle><path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path></svg>
-                  <span id="btn-text" class="text-xs font-bold text-slate-300 group-hover:text-white">Kiểm tra cập nhật</span>
-              </button>
-              <div class="flex-1 flex flex-col justify-center h-10 bg-black/40 rounded px-3 border border-white/5 relative overflow-hidden">
-                  <div id="update-log" class="text-[10px] font-mono text-green-400/80 overflow-hidden whitespace-nowrap text-ellipsis">>> Hệ thống sẵn sàng.</div>
-                  <div id="progress-container" class="absolute bottom-0 left-0 h-0.5 w-full bg-transparent hidden"><div id="progress-bar" class="h-full bg-cyan-500 w-0 transition-all duration-300"></div></div>
-              </div>
-              <div class="shrink-0 text-right"><div class="text-[10px] text-slate-500 uppercase">Phiên bản</div><div id="current-version-display" class="text-xs font-bold text-white">...</div></div>
           </div>
       </section>
-      <div id="browser-area" class="flex-1 hidden"></div>
+
       <section id="view-passwords" class="hidden flex-1 p-6 bg-[#0c1218] flex-col overflow-hidden">
         <div class="flex justify-between items-center mb-6">
             <div class="text-white"><h3 class="text-2xl font-bold">Danh sách Tài khoản</h3></div>
-            <button onclick="openEditModal()" class="bg-cyan-600 hover:bg-cyan-500 text-white px-4 py-2 rounded-lg font-bold flex items-center gap-2 shadow-lg"><span>+</span> Thêm mới</button>
+            <button id="add-account-btn" class="bg-cyan-600 hover:bg-cyan-500 text-white px-4 py-2 rounded-lg font-bold flex items-center gap-2 shadow-lg"><span>+</span> Thêm mới</button>
         </div>
         <div class="glass-panel rounded-xl overflow-hidden flex-1 overflow-y-auto">
             <table class="w-full nsl-table text-sm text-slate-300">
-                <thead><tr><th class="w-12">STT</th><th>Website</th><th>Tài khoản</th><th>Cấp học</th><th>Trường</th><th class="w-32 text-center">Thao tác</th></tr></thead>
+                <thead><tr><th class="w-12">STT</th><th>Website</th><th>Tài khoản</th><th class="w-32 text-center">Thao tác</th></tr></thead>
                 <tbody id="password-table-body"></tbody>
             </table>
         </div>
       </section>
+
+      <div id="browser-mount-point" class="absolute top-16 right-0 bottom-0 left-0 z-0 hidden"></div>
     </main>
+
     <div id="config-modal" class="hidden fixed inset-0 bg-black/90 z-[100] flex items-center justify-center backdrop-blur-md">
         <div class="glass-panel p-6 rounded-2xl w-96 border border-white/20">
             <h3 class="text-white font-bold mb-4">Thông tin Tài khoản</h3>
@@ -133,19 +140,30 @@
             <label for="cfg-user" class="block text-cyan-300 text-xs mb-1">Tài khoản:</label>
             <input id="cfg-user" class="w-full bg-slate-800 text-white p-2 rounded mb-2 text-sm border border-white/10">
             <label for="cfg-pass" class="block text-cyan-300 text-xs mb-1">Mật khẩu:</label>
-            <input id="cfg-pass" type="text" class="w-full bg-slate-800 text-white p-2 rounded mb-2 text-sm border border-white/10">
-            <label for="cfg-cap" class="block text-cyan-300 text-xs mb-1">Cấp học:</label>
-            <select id="cfg-cap" class="w-full bg-slate-800 text-white p-2 rounded mb-2 text-sm border border-white/10 appearance-none">
-                <option value="">-- Chọn cấp học --</option><option value="Mầm non">Mầm non</option><option value="Tiểu học">Tiểu học</option><option value="Trung học cơ sở">Trung học cơ sở</option><option value="Trung học phổ thông">Trung học phổ thông</option><option value="Giáo dục thường xuyên">Giáo dục thường xuyên</option>
-            </select>
-            <label for="cfg-truong" class="block text-cyan-300 text-xs mb-1">Trường:</label>
-            <input id="cfg-truong" class="w-full bg-slate-800 text-white p-2 rounded mb-4 text-sm border border-white/10">
+            <input id="cfg-pass" type="text" class="w-full bg-slate-800 text-white p-2 rounded mb-4 text-sm border border-white/10">
             <div class="flex justify-end gap-3">
-                <button onclick="document.getElementById('config-modal').classList.add('hidden')" class="px-4 py-2 text-slate-400 text-sm">Hủy</button>
-                <button onclick="saveConfigToRust()" class="bg-cyan-600 text-white px-6 py-2 rounded font-bold text-sm">Lưu</button>
+                <button id="cfg-cancel" class="px-4 py-2 text-slate-400 text-sm">Hủy</button>
+                <button id="cfg-save" class="bg-cyan-600 text-white px-6 py-2 rounded font-bold text-sm">Lưu</button>
             </div>
         </div>
     </div>
+
+    <div id="confirm-modal" class="hidden fixed top-24 left-1/2 transform -translate-x-1/2 z-[9999] opacity-0 transition-all duration-300">
+        <div class="glass-panel p-5 rounded-xl w-[400px] border border-cyan-500/50 shadow-[0_0_50px_rgba(0,0,0,0.8)] text-center bg-[#0f2027]/95 backdrop-blur-xl" id="confirm-box">
+            <div class="flex flex-col items-center">
+                <div class="w-10 h-10 bg-cyan-600 rounded-full flex items-center justify-center mb-3 shadow-lg shadow-cyan-500/30 animate-bounce">
+                    <span class="text-xl">💾</span>
+                </div>
+                <h3 class="text-white font-bold mb-1 text-lg">Lưu mật khẩu?</h3>
+                <p id="confirm-msg" class="text-slate-300 text-sm mb-4 leading-relaxed"></p>
+                <div class="flex justify-center gap-3 w-full">
+                    <button id="confirm-no" class="flex-1 px-4 py-2 rounded-lg border border-white/10 text-slate-400 hover:text-white hover:bg-white/10 transition-colors text-xs font-bold uppercase tracking-wider">Không</button>
+                    <button id="confirm-yes" class="flex-1 px-4 py-2 rounded-lg bg-gradient-to-r from-cyan-600 to-blue-600 hover:from-cyan-500 hover:to-blue-500 text-white font-bold text-xs uppercase tracking-wider shadow-lg">Lưu ngay</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
